[package]
name = "gcd"
version = "0.1.0"
edition = "2021"
authors = ["Steffen Neumann <steffen.neumann@gmx.net>"]
description = "to calculate the greatest common divisor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
